# transcribe-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  handlers.py  main.py  schemas.py
